fix(swagger): error: missing required param comment parameters
